--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/react-fontawesome": "^0.1.9",
         "@reduxjs/toolkit": "^1.2.5",
-        "react-router-dom": "^5.2.0"
+        "react-router-dom": "^5.2.0",
+        "react-redux": "^7.2.0",
+        "axios": "^0.19.2",
+        "react-spinners": "^0.8.1"
     }
 }
