--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "redux": "^4.0.5",
         "@fortawesome/fontawesome-svg-core": "^1.2.27",
         "@fortawesome/free-brands-svg-icons": "^5.12.1",
         "@fortawesome/free-solid-svg-icons": "^5.12.1",
         "@fortawesome/react-fontawesome": "^0.1.9",
         "@reduxjs/toolkit": "^1.2.5",
-        "react-router-dom": "^5.2.0",
-        "react-redux": "^7.2.0",
         "axios": "^0.19.2",
-        "react-spinners": "^0.8.1"
+        "highcharts": "^8.1.2",
+        "highcharts-react-official": "^3.0.0",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-spinners": "^0.8.1",
+        "redux": "^4.0.5"
     }
 }
